FIX #3: changed all pixel values to whole numbers to fix bug where column 2 right border was 1px too large in mobile version. add .gitignore

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     background-color: white;
     margin: 5rem auto;
     margin-bottom: 2.5rem;
-    border: 1.5px solid;
+    border: 2px solid;
     border-radius: 1px;
     width: 12.5rem;
 }
@@ -38,7 +38,7 @@ body {
 }
 
 #input {
-    border: 1.5px solid;
+    border: 2px solid;
     border-radius: 1px;
     height: 1.5rem;
     width: 5rem;
@@ -60,7 +60,7 @@ button {
     position: relative;
     display: inline-block;
     box-shadow: 0px 1px 4px -2px #333;
-    text-shadow: 0px -.5px #333;
+    text-shadow: 0px -1px #333;
 }
 
 .glass:after {
@@ -86,7 +86,7 @@ table {
 }
 
 td {
-    border: 1.5px solid;
+    border: 2px solid;
     width: 1.5rem;
     height: 1.5rem;
     text-align: center;
@@ -103,9 +103,9 @@ td {
 p {
     width: 1.5rem;
     height: 1.5rem;
-    border: 1.5px solid;
+    border: 2px solid;
     text-align: center;
-    margin: 1.5px;
+    margin: 1px;
     padding: 1px;
     line-height: 1.5rem;
 }
